log
Wed, Mar 19, 2025  8:49:48 AM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:50:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
dbebc7b
Wed, Mar 19, 2025  8:59:55 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += num;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
dedc33a
Wed, Mar 19, 2025  9:00:38 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += num;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
fc2ddc0
Wed, Mar 19, 2025  9:02:12 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
60dfdad
Wed, Mar 19, 2025  9:04:23 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
8a3d72c
Wed, Mar 19, 2025  9:09:23 AM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
53aa55f
Thu, Mar 20, 2025  4:47:47 PM: 
 tests:  3|2
total_score: 40/70
16e53ae
Thu, Mar 20, 2025  4:52:58 PM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
3fb287b
Thu, Mar 20, 2025  4:56:23 PM: 
 exercises.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
27136bf
Thu, Mar 20, 2025  4:57:03 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
fb0ad67
Thu, Mar 20, 2025  5:05:42 PM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:125:15: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(S, cadena[i]);
               ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9c602c4
Thu, Mar 20, 2025  5:08:21 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:125:15: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(S, cadena[i]);
               ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9d8460e
Thu, Mar 20, 2025  5:08:43 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:125:15: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(S, cadena[i]);
               ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ba50bd9
Thu, Mar 20, 2025  5:49:08 PM: 
 exercises.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:11: error: unused variable 'S' [-Werror=unused-variable]
    Stack* S = create_stack();
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
7ea2263
Thu, Mar 20, 2025  5:50:29 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:11: error: unused variable 'S' [-Werror=unused-variable]
    Stack* S = create_stack();
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
68b09aa
Thu, Mar 20, 2025  5:50:50 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:11: error: unused variable 'S' [-Werror=unused-variable]
    Stack* S = create_stack();
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
794f781
Thu, Mar 20, 2025  5:51:45 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:11: error: unused variable 'S' [-Werror=unused-variable]
    Stack* S = create_stack();
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
95de2a6
Thu, Mar 20, 2025  5:52:07 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:11: error: unused variable 'S' [-Werror=unused-variable]
    Stack* S = create_stack();
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
001e5b1
Thu, Mar 20, 2025  5:52:36 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:122:11: error: unused variable 'S' [-Werror=unused-variable]
    Stack* S = create_stack();
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
d5d7eeb
Thu, Mar 20, 2025  5:57:57 PM: 
 exercises.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:127:18: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(S, caracter);
                  ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7047d9a
Thu, Mar 20, 2025  9:04:18 PM: 
 exercises.c | 33 ++++++++++++++++++++++-----------
 1 file changed, 22 insertions(+), 11 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:127:19: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(S1, caracter);
                   ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:130:19: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(S2, caracter);
                   ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1f4fc82
Thu, Mar 20, 2025  9:21:29 PM: 
 exercises.c | 21 +++++++++------------
 1 file changed, 9 insertions(+), 12 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:130:19: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(S1, caracter);
                   ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:133:19: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(S2, caracter);
                   ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
611d068
